force-app/main/default/objects/Sup_NS_Brand__c/Sup_NS_Brand__c.object-meta.xml
<CustomObject>
    <description>Detail Brands linked to the nego scope</description>
    <label>Nego Scope Brand</label>
    <nameField>
        <displayFormat>SNS BRA {0}</displayFormat>
        <label>Nego Scope Brand Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nego Scope Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>