force-app/main/default/objects/Sup_NS_Brand__c/fields/Sup_Scope_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sup_Scope_Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Supplier Nego scope Brands</relationshipLabel>
    <relationshipName>Supplier_Nego_scope_Brands</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>