force-app/main/default/objects/Sup_NS_Brand__c/fields/Sup_sup_NegoScope__c.field-meta.xml
<CustomField>
    <fullName>Sup_sup_NegoScope__c</fullName>
    <label>Supplier Nego Scope</label>
    <referenceTo>NegoScope__c</referenceTo>
    <relationshipLabel>Supplier Nego scope Brands</relationshipLabel>
    <relationshipName>Supplier_Nego_scope_Brands</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>